objects/LiveMessage_Session_Assignment_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>IsRetention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QueueAPIName__c</fullName>
        <label>Queue API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportOption__c</fullName>
        <label>Support Option</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LiveMessage Session Assignment Setting</label>
    <pluralLabel>LiveMessage Session Assignment Settings</pluralLabel>
</CustomObject>